# mws-rs

mws/: Cargo.toml
mws-cli/: Cargo.toml
mws/src/: client.rs  lib.rs  sign.rs
mws/src/feeds/: mod.rs
mws/src/fulfillment_inbound_shipment/: mod.rs
mws/src/fulfillment_inventory/: mod.rs
mws/src/fulfillment_outbound/: mod.rs
mws/src/merchant_fulfillment/: mod.rs
mws/src/orders/: mod.rs
mws/src/reports/: mod.rs
